--- a/keymap_drawer.config.yaml
+++ b/keymap_drawer.config.yaml
@@ -110,6 +110,7 @@ draw_config:
   use_local_cache: true
 
 parse_config:
+  keymap_path: boards/arm/eyelash_sofle/eyelash_sofle.keymap
   mark_alternate_layer_activators: true
   sticky_label: $$mdi:gesture-tap-hold$$
   trans_legend:
